# insecure-banking

./: .cache_ggshield  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  traces.txt  update_imports.py  update_imports_v2.py  update_patches.py
.config/: .markdown-lint.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/actions/sanity/: action.yml
.github/instructions/: python.instructions.md
.github/workflows/: branch.yml  main.yml  pr.yml  tag.yml
.spec/: README.md  agent-specification.md
apps/accounts/: __init__.py  apps.py  auth.py  models.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_load_data.py
apps/banking/: __init__.py  apps.py  models.py  services.py  urls.py  views.py
apps/banking/migrations/: 0001_initial.py  __init__.py
apps/core/: apps.py  context_processors.py  middleware.py
apps/transfers/: __init__.py  apps.py  models.py  services.py  urls.py  views.py
apps/transfers/migrations/: 0001_initial.py  __init__.py
deploy/: DEPLOYMENT.md  QUICKSTART.md  azure-deploy.bicep  deploy-azure.sh  setup-cloudflare.sh
docs/: README.md  project-overview.md
docs/architecture/: authentication.md  database-schema.md  db.md  django-framework.md  middleware.md  models.md  overview.md  security-vulnerabilities.md  services.md  views-urls.md
docs/cicd/: main-workflow.md  overview.md  pr-workflow.md  pre-commit.md
docs/development/: code-quality.md  contributing.md  dependencies.md  docker.md  quality.md  running.md  setup.md
docs/pipelines/: tag-workflow.md
docs/security/: iditarod.md  overview.md  security-tests.md  vulnerabilities.md
docs/testing/: configuration.md  integration-tests.md  overview.md  security-tests.md  structure.md  unit-tests.md
insecure_banking/: __init__.py  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
scripts/: README.md  generate_fake_data.py  sample_output.sql
src/config/: asgi.py  middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
src/data/: yaml.py
src/web/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  views.py
src/web/migrations/: 0001_initial.py  0002_alter_transfer_fee_alter_transfer_fromaccount_and_more.py  data.sql
src/web/static/js/: queen-elements.js
src/web/static/js/plugins/bootstrap-progressbar/: bootstrap-progressbar.min.js
src/web/static/js/plugins/jquery-gritter/: jquery.gritter.custom.js
src/web/static/js/plugins/select2/: select2.js
src/web/static/js/plugins/summernote/: summernote.js  summernote.min.js
src/web/templates/: accountActivity.html  dashboard.html  layout.html  newTransfer.html  transferCheck.html
static/css/: dark-mode.css  font-awesome.min.css  google-fonts.css  main.css
static/js/: queen-charts.js  queen-common.js  queen-form-layouts.js  queen-maps.js  queen-page.js  queen-table.js
static/js/plugins/bootstrap-datepicker/: bootstrap-datepicker.js
static/js/plugins/bootstrap-editable/: address.custom.js
static/js/plugins/datatable/exts/: dataTables.colVis.bootstrap.js  dataTables.colVis.js
static/js/plugins/dropzone/: dropzone.js  dropzone.min.js
static/js/plugins/google-map/: google-map.js
static/js/plugins/jqallrangesliders/: jQAllRangeSliders-min.js  jQAllRangeSliders.js
static/js/plugins/mapael/maps/: france_departments.js  usa_states.js  world_countries.js
static/js/plugins/parsley-validation/: parsley.js
templates/: creditActivity.html  transferConfirmation.html
templates/partials/: footer.html
tests/: base.py  conftest.py  database.py  model_helpers.py  test_integration.py  test_setup.py  utils.py
tests/e2e/: README.md  __init__.py  conftest.py  test_activity.py  test_auth_flow.py  test_dashboard.py  test_john.py  test_john_login.py  test_login.py  test_logout.py  test_transfer.py  test_transfer_flow.py  utils.py
tests/integration/: conftest.py  test_admin_flow.py  test_auth_flow.py  test_database_integration.py  test_transfer_flow.py
tests/security/: conftest.py  test_command_injection.py  test_crypto_weaknesses.py  test_deserialization.py  test_sql_injection.py
tests/unit/: conftest.py  test_context_processors.py  test_models.py  test_operation.py  test_services.py  test_views.py
